<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Exchange</string>
    <string name="action_settings">Settings</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="addShare">Add Share</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_add_share">Add Share</string>
    <string name="title_activity_my_portfolio">My Portfolio</string>
    <string name="title_activity_quote_evolution">Quote Evolution</string>
    <string name="see_evolution">See evolution</string>
    <string name="time_frame">Time Frame</string>
    <string name="last_year">Last Year</string>
    <string name="last_3months">Last 3 Months</string>
    <string name="last_month">Last Month</string>
    <string name="last_7days">Last 7 days</string>
    <string name="compare">Compare</string>
    <string name="title_activity_comparison">Comparison</string>
    <string name="portfolio_info">Portfolio Info</string>
    <string name="title_activity_portfolio_info">Portfolio Info</string>
    <string name="portfolio_value">Current portfolio value: </string>
    <string name="options">Options</string>
    <string name="confirm_option">Confirm</string>
    <string name="port_value">Portfolio value</string>
    <string name="stock_value">Stock value</string>
    <string name="stock_number">Stock number</string>

</resources>