<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_bg"
    android:configChanges="keyboardHidden|orientation"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/last_year"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/last_year"
        android:textColor="@color/orange0" />

    <Button
        android:id="@+id/last_months"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27"
        android:background="@drawable/button_bg"
        android:text="@string/last_3months"
        android:textColor="@color/orange0" />

    <Button
        android:id="@+id/last_month"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27"
        android:background="@drawable/button_bg"
        android:text="@string/last_month"
        android:textColor="@color/orange0" />

    <Button
        android:id="@+id/last_week"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27"
        android:background="@drawable/button_bg"
        android:text="@string/last_7days"
        android:textColor="@color/orange0" />

</LinearLayout>